# prop-firm-research-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  free-api-open-source-trading-research.md  open-source-bot-integration-notes.md  paper-trading-simulation-report.md  pyproject.toml  research-notes-2026-06-02.md  run-local.ps1
app/: app.js  index.html  styles.css
src/prop_firm_ai/: __init__.py  audit.py  backtest.py  community.py  confidence.py  dashboard.py  domain.py  fundamentals.py  hybrid_gate.py  macro.py  main.py  market_data.py  micro.py  oms.py  open_source.py  risk.py  sizing.py  statarb.py  subagents.py  system.py  telegram.py
tests/: test_regression.py  test_system.py
